--- a/RetroCalculator/Base.lproj/LaunchScreen.storyboard
+++ b/RetroCalculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,12 +20,58 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="LIo-SZ-bLh">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="cv4-4n-RYq">
+                                <rect key="frame" x="45" y="54" width="285" height="111"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="111" id="p0y-V6-Lou"/>
+                                    <constraint firstAttribute="width" constant="285" id="ubR-8c-Pc6"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="XCh-RJ-Y2i">
+                                <rect key="frame" x="44.5" y="173" width="285" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="CRS-Ed-RME"/>
+                                    <constraint firstAttribute="width" constant="240" id="LLz-pJ-oV7"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="P3H-NZ-EfX">
+                                <rect key="frame" x="-5" y="539" width="380" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="Piy-6w-Xjn"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="XCh-RJ-Y2i" firstAttribute="trailing" secondItem="cv4-4n-RYq" secondAttribute="trailing" id="5Nk-Tz-0sL"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="LIo-SZ-bLh" secondAttribute="bottom" id="C20-1X-KHR"/>
+                            <constraint firstItem="XCh-RJ-Y2i" firstAttribute="centerX" secondItem="cv4-4n-RYq" secondAttribute="centerX" id="IaF-3q-Gs7"/>
+                            <constraint firstItem="LIo-SZ-bLh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="QhI-bJ-t6X"/>
+                            <constraint firstItem="LIo-SZ-bLh" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="RSt-y4-fNl"/>
+                            <constraint firstItem="XCh-RJ-Y2i" firstAttribute="top" secondItem="cv4-4n-RYq" secondAttribute="bottom" constant="8" id="S6B-jU-hUA"/>
+                            <constraint firstItem="P3H-NZ-EfX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="-5" id="bVZ-u8-rgW"/>
+                            <constraint firstItem="XCh-RJ-Y2i" firstAttribute="leading" secondItem="cv4-4n-RYq" secondAttribute="leading" id="mjE-3s-V8a"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="P3H-NZ-EfX" secondAttribute="bottom" id="q7u-p9-IWd"/>
+                            <constraint firstAttribute="trailing" secondItem="LIo-SZ-bLh" secondAttribute="trailing" id="rmJ-KB-Hx7"/>
+                            <constraint firstAttribute="trailing" secondItem="P3H-NZ-EfX" secondAttribute="trailing" id="sqW-NO-EQt"/>
+                            <constraint firstItem="cv4-4n-RYq" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="w2U-xF-ewO"/>
+                            <constraint firstItem="cv4-4n-RYq" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="34" id="xSi-eg-gxC"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
